lists/failed/Rdisop
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''Rdisop'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-03 r85769)
Installing package(s) 'Rdisop'
also installing the dependencies ‘Rcpp’, ‘RUnit’

trying URL 'https://cloud.r-project.org/src/contrib/Rcpp_1.0.11.tar.gz'
Content type 'application/x-gzip' length 2994004 bytes (2.9 MB)
==================================================
downloaded 2.9 MB

trying URL 'https://cloud.r-project.org/src/contrib/RUnit_0.4.32.tar.gz'
Content type 'application/x-gzip' length 337142 bytes (329 KB)
==================================================
downloaded 329 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/Rdisop_1.63.0.tar.gz'
Content type 'application/x-gzip' length 836250 bytes (816 KB)
==================================================
downloaded 816 KB

* installing *source* package ‘Rcpp’ ...
** package ‘Rcpp’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I../inst/include/  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c api.cpp -o api.o
In file included from ../inst/include/Rcpp/routines.h:26,
                 from ../inst/include/RcppCommon.h:128,
                 from ../inst/include/Rcpp.h:27,
                 from api.cpp:26:
../inst/include/Rcpp/iostream/Rstreambuf.h: In member function ‘std::streamsize Rcpp::Rstreambuf<OUTPUT>::xsputn(const char*, std::streamsize) [with bool OUTPUT = true; std::streamsize = long int]’:
../inst/include/Rcpp/iostream/Rstreambuf.h:53:20: warning: field precision specifier ‘.*’ expects argument of type ‘int’, but argument 2 has type ‘std::streamsize’ {aka ‘long int’} [-Wformat=]
   53 |         Rprintf("%.*s", num, s);
      |                  ~~^~   ~~~
      |                    |    |
      |                    int  std::streamsize {aka long int}
../inst/include/Rcpp/iostream/Rstreambuf.h: In member function ‘std::streamsize Rcpp::Rstreambuf<OUTPUT>::xsputn(const char*, std::streamsize) [with bool OUTPUT = false; std::streamsize = long int]’:
../inst/include/Rcpp/iostream/Rstreambuf.h:57:21: warning: field precision specifier ‘.*’ expects argument of type ‘int’, but argument 2 has type ‘std::streamsize’ {aka ‘long int’} [-Wformat=]
   57 |         REprintf("%.*s", num, s);
      |                   ~~^~   ~~~
      |                     |    |
      |                     int  std::streamsize {aka long int}
In file included from ../inst/include/RcppCommon.h:181,
                 from ../inst/include/Rcpp.h:27,
                 from api.cpp:26:
../inst/include/Rcpp/print.h: In function ‘void Rcpp::warningcall(SEXP, const string&)’:
../inst/include/Rcpp/print.h:30:19: error: format not a string literal and no format arguments [-Werror=format-security]
   30 |     Rf_warningcall(call, s.c_str());
      |     ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
cc1plus: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:200: api.o] Error 1
ERROR: compilation failed for package ‘Rcpp’
* removing ‘/tmp/tmp/built/Rcpp’
* installing *source* package ‘RUnit’ ...
** package ‘RUnit’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘RUnit’ as ‘RUnit_0.4.32_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (RUnit)
ERROR: dependency ‘Rcpp’ is not available for package ‘Rdisop’
* removing ‘/tmp/tmp/built/Rdisop’

The downloaded source packages are in
	‘/tmp/RtmpQws7OP/downloaded_packages’
Warning messages:
1: In install.packages(...) :
  installation of package ‘Rcpp’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘Rdisop’ had non-zero exit status

real	0m8.380s
user	0m6.018s
sys	0m1.626s
